--- a/public/views/maps/editScene.html
+++ b/public/views/maps/editScene.html
@@ -346,7 +346,13 @@
                                                               | limitTo:pageSizeStaticItems">
                                                 <tr>
                                                     <td>{{staticItemElement.name}}</td>
-                                                    <td>{{staticItemElement.type.name}}</td>
+                                                    <td>
+                                                        <a href="#/map/editMap" 
+                                                           editable-select="staticItemElement.type" 
+                                                           e-ng-options="staticItem as staticItem.name for staticItem in staticItemList">
+                                                            {{staticItemElement.type.name || "empty"}}
+                                                        </a>
+                                                    </td>
                                                     <td><img src="{{staticItemElement.type.icon}}" height="16" width="16"/></td>
                                                     <td>
                                                         <button class="btn btn-danger fa fa-trash-o" 
