--- a/public/views/maps/editScene.html
+++ b/public/views/maps/editScene.html
@@ -410,7 +410,7 @@
                                         <div class="col-xs-12">           
                                             <br/>      
                                             <label>Dynamic items</label>
-                                            <input type="file" ng-model='scene.dynamicItemFile'>      
+                                            <input type="file" name="dynamicItemFile" id="dynamicItemFile" ng-model='scene.dynamicItemFile'>      
                                             <b>
                                                 <i>* File containing dynamic objects of the map, that is, the changing 
                                                 geographic position during the simulation such as automobiles
@@ -571,7 +571,13 @@
                                                               | limitTo:pageSizeDynaicItems">
                                                 <tr>
                                                     <td>{{dynamicItem.name}}</td>
-                                                    <td>{{dynamicItem.type.name}}</td>
+                                                    <td>    
+                                                        <a href="#/map/editScene"
+                                                           editable-select="dynamicItem.type" 
+                                                           e-ng-options="item as item.name for item in dynamicItemList">
+                                                            {{dynamicItem.type.name || "empty"}}
+                                                        </a>
+                                                    </td>
                                                     <td>{{dynamicItem.speed}}</td>
                                                     <td><img src="{{dynamicItem.type.icon}}" height="16" width="16"/></td>
                                                     <td>
