--- a/public/views/settings/dynamicItemSettings.html
+++ b/public/views/settings/dynamicItemSettings.html
@@ -119,7 +119,7 @@
                         </tbody>
                     </table>                    
 
-                    <nav align="center" ng-hide="staticItemList.length==0">
+                    <nav align="center" ng-show="dynamicItemList.length!=0">
                         <ul class="pagination">
                             <li ng-disabled="currentPage == 0">
                                 <a href="#/settings/dynamicItemSettings" 
