--- a/public/views/settings/recommenderSettings.html
+++ b/public/views/settings/recommenderSettings.html
@@ -183,7 +183,7 @@
                         </tbody>
                     </table>
                     
-                    <nav align="center">
+                    <nav align="center" ng-show="recommenderList.length!=0">
                         <ul class="pagination">
                             <li ng-disabled="currentPage == 0">
                                 <a href="#/settings" 
