--- a/public/views/configurations/index.html
+++ b/public/views/configurations/index.html
@@ -15,6 +15,7 @@
                     <ul class="nav navbar-nav side-nav">
                         <li><a href="#/map"><i class="fa fa-map-marker"></i> Maps</a></li>
                         <li><a href="#/simulator"><i class="fa fa-globe"></i> Simulation</a></li>
+                        <li><a href="#/evaluations"><i class="fa fa-bar-chart-o"></i> Evaluations</a></li>
                         <li><a href="#/settings"><i class="fa fa-cog"></i> Settings</a></li>
                         <li class="active"><a href="#/profile"><i class="fa fa-edit"></i> Profile</a></li>
                         <li><a href="#/" ng-click="exit()"><i class="fa fa-power-off"></i> Exit</a></li>
@@ -43,7 +44,7 @@
                     
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Change password</h3>
+                            <h3 class="panel-title"><i class="fa fa-edit"></i> Change password</h3>
                         </div>
 
                         <div class="panel-body">
@@ -73,7 +74,7 @@
                     
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Change username</h3>
+                            <h3 class="panel-title"><i class="fa fa-edit"></i> Change username</h3>
                         </div>
 
                         <div class="panel-body">
@@ -98,7 +99,7 @@
 
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            <h3 class="panel-title"><i class="fa fa-bar-chart-o"></i> Upload photo</h3>
+                            <h3 class="panel-title"><i class="fa fa-edit"></i> Upload photo</h3>
                         </div>
 
                         <div class="panel-body">
