--- a/public/views/maps/editMap.html
+++ b/public/views/maps/editMap.html
@@ -15,6 +15,7 @@
                 <ul class="nav navbar-nav side-nav">
                     <li class="active"><a href="#/map"><i class="fa fa-map-marker"></i> Maps</a></li>
                     <li><a href="#/simulator"><i class="fa fa-globe"></i> Simulation</a></li>
+                    <li><a href="#/evaluations"><i class="fa fa-bar-chart-o"></i> Evaluations</a></li>
                     <li><a href="#/settings"><i class="fa fa-globe"></i> Settings</a></li>
                     <li><a href="#/profile"><i class="fa fa-edit"></i> Profile</a></li>
                     <li><a href="#/" ng-click="exit()"><i class="fa fa-power-off"></i> Exit</a></li>
