--- a/public/views/maps/editScene.html
+++ b/public/views/maps/editScene.html
@@ -265,6 +265,11 @@
                                             <label>Latitude</label>
                                             <input id="staticItemLat" class="form-control" ng-model="newStaticItem.latitude" disabled/>
                                         </div>
+                                        
+                                        <div class="col-xs-12">
+                                            <label>Description: </label>
+                                            <textarea class="form-control" ng-model="newStaticItem.description" rows="3"></textarea>
+                                        </div>
 
                                         <div class="col-xs-12">
                                             <br/>
@@ -354,6 +359,7 @@
                                                     <th>Item name</th>
                                                     <th>Item type</th>
                                                     <th>Icon</th>
+                                                    <th>Description</th>
                                                     <th>Options</th>
                                                 </tr>
                                             </thead>
@@ -371,6 +377,7 @@
                                                         </a>
                                                     </td>
                                                     <td><img src="{{staticItemElement.type.icon}}" height="16" width="16"/></td>
+                                                    <td>{{staticItemElement.description}}</td>
                                                     <td>
                                                         <button class="btn btn-danger fa fa-trash-o" 
                                                                 data-toggle="modal" data-target="#deleteStaticItemModal"
@@ -466,6 +473,11 @@
                                             <br/>
                                             <label>Item speed (km/h)</label>
                                             <input ng-model="newDynamicItem.itemSpeed" class="form-control"/>
+                                        </div>
+                                        
+                                        <div class="col-xs-12">
+                                            <label>Description: </label>
+                                            <textarea class="form-control" ng-model="newDynamicItem.description" rows="3"></textarea>
                                         </div>
                                         
                                         <div class="col-xs-3">
@@ -595,6 +607,7 @@
                                                     <th>Item type</th>
                                                     <th>Speed</th>
                                                     <th>Icon</th>
+                                                    <th>Description</th>
                                                     <th>Options</th>
                                                 </tr>
                                             </thead>
@@ -613,6 +626,7 @@
                                                     </td>
                                                     <td>{{dynamicItem.speed}}</td>
                                                     <td><img src="{{dynamicItem.type.icon}}" height="16" width="16"/></td>
+                                                    <td>{{dynamicItem.description}}</td>
                                                     <td>
                                                         <button class="btn btn-danger fa fa-trash-o" 
                                                                 data-toggle="modal" data-target="#deleteDynamicItemModal"
